--- a/RosePerksTest/RosePerksTest/RHPerks-Info.plist
+++ b/RosePerksTest/RosePerksTest/RHPerks-Info.plist
@@ -9,17 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
-	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>apple-touch-icon-57x57</string>
-				<string>apple-touch-icon-76x76</string>
-				<string>apple-touch-icon-120x120</string>
-			</array>
-		</dict>
-	</dict>
+	<dict/>
+	<key>CFBundleIcons~ipad</key>
+	<dict/>
 	<key>CFBundleIdentifier</key>
 	<string>edu.rosehulman.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
